fixed recipe ingredient layout issue in safari (#387)
* fixed barcode button on iOS and made nicer on the desktop

* fixed indentation

* fixed indentation

* fixed recipe ingredient layout issue in safari

--- a/public/css/grocy.css
+++ b/public/css/grocy.css
@@ -317,3 +317,8 @@ canvas.drawingBuffer {
 	left: 0;
 	top: 0;
 }
+
+/* Third party component customizations - Bootstrap list-group */
+.list-group {
+	flex-shrink: 0;
+}
